--- a/styles.css
+++ b/styles.css
@@ -28,22 +28,26 @@ color: black;
 font-family: Helvetica,arial,sans-serif;
  }
 
+nav {
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 2em;
+}
+
 nav ul{
 	max-width: 100%;
 	max-height: auto;
 	background-color:#c33;
-	border: .25em #FFCC00 solid;
+    position: relative;
+    margin: 0 -0.5em;
+    padding: 0.25rem 15px;
   	text-align: center;
-  	margin:20px 40px;
-  	padding: 0px; 
 }
 
 
 nav li{
 	display:inline-block;
-	font-family: Arial, sans-serif;
 	font-size: 18px;
-	margin:0px 0px;
   	line-height: 40px;
   	height: auto auto;
 	list-style-type: none;
@@ -53,16 +57,17 @@ nav li{
 
 nav li a{
 	max-width: auto auto;
-	padding: 15px 15px;
+	padding: 10px 10px;
 	display: inline-block;
 	background-color: #003366;
 	color: #FFF;
 	margin:10px 10px;
 	text-decoration:none;
+    transition-duration: 0.3s;
 }
 
 nav li a:hover{
-	background-color: #F90;
+	background-color: #f9d110;
 	color: #666;
 }
    
@@ -116,4 +121,13 @@ nav li a:hover{
 	max-width: 100%;
 	max-height: 250px;
 	background-color: black;
+}
+
+.landingtitle {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    margin: 0 -0.3em;
+    padding: 0.25rem 30px;
+    background: #333;
 }
