--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@ color: black;
 font-family: Helvetica,arial,sans-serif; font-weight: lighter;
 }
 
+ul {
+	text-align: left;
+}
 
 p {
 color: black;
