--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
 background-color: whitesmoke;
-overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 h1  {
@@ -23,14 +23,15 @@ color: black;
 font-family: Helvetica,arial,sans-serif; font-weight: lighter;
 }
 
-ul {
-	text-align: left;
-}
 
 p {
 color: black;
 font-family: Helvetica,arial,sans-serif;
  }
+
+ul {
+	text-align: left;
+}
 
 nav {
     font-family: 'Montserrat', sans-serif;
@@ -75,11 +76,6 @@ nav li a:hover{
 	color: #666;
 }
    
-/*.center {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-}*/
 
 .img_float_right {
     margin-top: 10px;
@@ -112,7 +108,7 @@ nav li a:hover{
   width: 70%;
   border: 2px solid black;
   padding: 10px;
-	text-align: center;
+  text-align: center;
 }
 
 .square{ 
@@ -138,4 +134,21 @@ nav li a:hover{
 
 .removeBullets {
 	list-style: none;
+}
+
+.toolcontainer {
+    width: 96%;
+    max-width: 1920px;
+    margin: 10px auto;
+    border: 2px solid black;
+    padding: 10px;
+    grid-gap: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.toolcontainer img {
+    width: 100%;
+    height: auto;
 }
